@@ -9,7 +9,9 @@
     (at your option) any later version.
 */
 
-typedef __CHAR16_TYPE__ char16_t;
+/*#if (defined(__clang__) && !defined char16_t)
+	typedef __CHAR16_TYPE__ char16_t;
+#endif*/
 
 #include "support.h"
 
